[fix bug 1295554] Firefox iOS page shows both App Store button and Send to Device widget when viewed on iOS

--- a/media/css/firefox/ios.less
+++ b/media/css/firefox/ios.less
@@ -621,7 +621,7 @@ a.go {
     .appstore-badge {
         display: block;
     }
-    .send-to-device,
+    #send-to-device,
     .send-to.button.green  {
         display: none;
     }
